--- a/OrangeDot6_files/visuals/visuals-microdata.Rmd
+++ b/OrangeDot6_files/visuals/visuals-microdata.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Orange Dot 6.0 - Regional Microdata"
-author: "Elizabeth Mitchell"
-date: "2024-10-04"
-output: html_document
+# output: html_document
+output: word_document
 ---
 ```{css, echo=FALSE}
 .main-container.container-fluid {
@@ -58,7 +57,7 @@ acs_pums <- "Data Source: ACS Public Use Microdata Sample (PUMS), U.S. Census Bu
 ```
 
 
-```{r race_by_percent}
+```{r race_by_percent, fig.width = 9.5, fig.height = 6, fig.retina = 2, out.width = '100%'}
 fam_by_race <- read_csv("../microdata/data/families_by_race.csv") %>% 
   mutate(
     race_ethn = case_when(hhldr_race_ethn %in% c("Hispanic", "Black", "White") ~ hhldr_race_ethn,
@@ -73,43 +72,46 @@ fam_by_race <- read_csv("../microdata/data/families_by_race.csv") %>%
 fam_by_race %>% 
   filter(hhldr_race_ethn %in% c("White", "Black", "Hispanic")) %>% 
   ggplot(aes(x = percent, y = race_ethn, group = race_ethn, fill = below_ess_finc)) +
-  geom_bar(stat = "identity", position = position_dodge2(width = 0.9, preserve = "single")) +
+  geom_bar(stat = "identity", position = position_dodge2(width = 0.8, preserve = "single")) +
   geom_text(aes(label = paste0(scales::percent(percent / 100, accuracy = 1), " (",
                         scales::comma(count), " families)")),
-            position = position_dodge2(width = 0.9, preserve = "single"),
+            position = position_dodge2(width = 0.8, preserve = "single"),
             vjust = 0.5,
             hjust = -0.05,
-            size = 3) +
+            size = 5) +
   scale_y_discrete(name = "") +
   scale_x_continuous(name = "",
                      limits = c(0,100),
                      breaks = seq(0, 100, by = 25),
                      label= label_percent(scale = 1),
-                     expand = expansion(mult = c(0, 0.1)),
+                     expand = expansion(mult = c(0, 0.18)),
                      sec.axis = dup_axis()) +
   scale_fill_manual(values = c(orange_dot, green_dot)) +
-  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Race/Ethnicity",
+  labs(title = "Race/Ethnicity of Families Earning Below and Above the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme_minimal() +
   theme(legend.title=element_blank(),
         legend.position = "top",
-        # legend.location = "plot",
+        legend.location = "plot",
         legend.justification="center",
+        legend.text = element_text(size = 13),
           panel.grid.major.y = element_blank(),
           axis.ticks = element_blank(),
           panel.grid.minor = element_blank(),
           plot.title.position= "plot",
-          plot.caption.position = "plot")
+          plot.caption.position = "plot",
+        axis.text.y = element_text(color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.text.x = element_text(size=14),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 ```
 
 
-```{r age_butterfly_percent}
+```{r age_butterfly_percent, fig.width = 10.5, fig.height=6, fig.retina = 2, out.width = '100%'}
 fam_by_age <- read_csv("../microdata/data/families_by_age.csv") %>% 
   mutate(hhldrage_bin = factor(hhldrage_bin, levels = c("65 and over", "55 to 64", "45 to 54", "35 to 44", "25 to 34", "Under 25")),
-         label_text = case_when(
-           below_ess_finc == "Yes" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families below SSS)"),
-           below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families above SSS)")),
          below_ess_finc = factor(below_ess_finc, levels = c("Yes", "No"),
                                  labels = c("Income Below Self-Sufficiency Standard", "Income Above Self-Sufficiency Standard")))
 
@@ -141,7 +143,7 @@ ggplot() +
                           hjust = case_when(below_ess_finc == "Income Above Self-Sufficiency Standard" ~  1,
                                         below_ess_finc == "Income Below Self-Sufficiency Standard" ~  0),
                           label = label_text),
-            size = 3
+            size = 4.5
             ) +
   scale_x_discrete(name = "") +
   scale_y_continuous(expand = expansion(mult = c(0, 0)),
@@ -153,45 +155,43 @@ ggplot() +
               reverse_num = TRUE) +
   coord_flip(clip = "off") +
   theme_light() +
-  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Householder Age",
+  labs(title = "Age of Householder for Families Earning Below and Above the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme(legend.position = "none",
         panel.grid.minor.x = element_blank(),
         panel.border = element_blank(),
-        strip.text = element_text(size = rel(1),
+        strip.text = element_text(size = rel(1.15),
                                   # face = "bold",
                                   color = "black"),
     strip.background = element_rect(fill = "white", colour = "black", size = 0),
     plot.title.position= "plot",
-          plot.caption.position = "plot"
-        )
+          plot.caption.position = "plot",
+        axis.text.y = element_text(hjust = 0.5, color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.title.x = element_text(size=13),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 
 ```
 
 
-```{r tenure-stacked}
+```{r tenure-stacked, fig.width=9.5, fig.height=5, fig.retina = 2, out.width = '100%'}
 fam_by_tenure <- read_csv("../microdata/data/families_by_tenure.csv") %>% 
   mutate(label_text = case_when(
     below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families above SSS)"),
     below_ess_finc == "Yes" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families below SSS)")),
          below_ess_finc = factor(below_ess_finc, levels = c("No", "Yes"),
-                                 labels = c("Income Above\nSelf-Sufficiency Standard", "Income Below\nSelf-Sufficiency Standard")))
+                                 labels = c("Income Above\nSelf-Sufficiency Standard", "Income Below\nSelf-Sufficiency Standard")),
+    own_rent = factor(own_rent, levels = c("Own", "Rent"), labels = c("Homeowners", "Renters")))
 
 fam_by_tenure %>% 
-  ggplot(aes(x = percent, y = below_ess_finc, group=below_ess_finc, fill = factor(own_rent, levels = c("Own", "Rent")))) +
+  ggplot(aes(x = percent, y = below_ess_finc, group=below_ess_finc, fill = own_rent)) +
   geom_bar(stat = "identity") +
-  # geom_text(aes(label = case_when(
-  #          own_rent == "Own" ~ paste0(round(percent, 0), "% are Homeowners\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
-  #          own_rent == "Rent" ~ paste0(round(percent, 0), "% are Renters\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"))),
-  #           position = position_stack(vjust = 0.5), 
-  #           vjust = 0.5,
-  #           # hjust = -0.025,
-  #           size = 3) +
   geom_label_repel(aes(label = case_when(
-           own_rent == "Own" ~ paste0(round(percent, 0), "% are Homeowners\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
-           own_rent == "Rent" ~ paste0(round(percent, 0), "% are Renters\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"))),
-                  size = 3, fontface = "bold", show.legend = FALSE,
+           own_rent == "Homeowners" ~ paste0(round(percent, 0), "% are Homeowners\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
+           own_rent == "Renters" ~ paste0(round(percent, 0), "% are Renters\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"))),
+                  size = 4.5, fontface = "bold", show.legend = FALSE,
                   min.segment.length = Inf,
                   position = position_stack(vjust = 0.35),
            vjust = 0.5,
@@ -206,7 +206,7 @@ fam_by_tenure %>%
                      sec.axis = dup_axis()) + 
   scale_y_discrete(name = "") +
   scale_fill_manual(values = c(grey_dot, blue_dot)) +
-  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Housing Status: Homeowner or Renter",
+  labs(title = "Housing Status for Families Earning Below and Above the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme_minimal() +
@@ -214,16 +214,21 @@ fam_by_tenure %>%
         legend.position = "top",
         # legend.location = "plot",
         legend.justification="center",
+        legend.text = element_text(size = 13),
           panel.grid.major.y = element_blank(),
           axis.ticks = element_blank(),
           panel.grid.minor = element_blank(),
           plot.title.position= "plot",
           plot.caption.position = "plot",
-        axis.text.y = element_text(hjust = 0.5))
+        axis.text.y = element_text(hjust = 0.5, color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.title.x = element_text(size=12),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 ```
 
 
-```{r burden}
+```{r burden, fig.width=9.5, fig.height=5, fig.retina = 2, out.width = '100%'}
 fam_by_burden <- read_csv("../microdata/data/families_by_burden.csv") %>% 
   mutate(label_text = case_when(
     below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "% of families above SSS)"),
@@ -232,7 +237,7 @@ fam_by_burden <- read_csv("../microdata/data/families_by_burden.csv") %>%
                                  labels = c("Income Above\nSelf-Sufficiency Standard", "Income Below\nSelf-Sufficiency Standard")))
 
 fam_by_burden %>% 
-  ggplot(aes(x = percent, y = below_ess_finc, group=below_ess_finc, fill = factor(shelter_burden, levels = c("Not Burdened", "Burdened", "Severely Burdened")))) +
+  ggplot(aes(x = percent, y = below_ess_finc, group=below_ess_finc, fill = factor(shelter_burden, levels = c("Not Burdened", "Burdened", "Severely Burdened"), labels = c("Not Burdened\nLess than 30% household income", "Burdened\n30% to 49% household income", "Severely Burdened\nOver 50% household income")))) +
   geom_bar(stat = "identity") +
   # geom_text(aes(label = case_when(
   #          shelter_burden == "Not Burdened" ~ paste0(round(percent, 0), "% are Not Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
@@ -246,7 +251,7 @@ fam_by_burden %>%
            shelter_burden == "Not Burdened" ~ paste0(round(percent, 0), "% Not Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
            shelter_burden == "Burdened" ~ paste0(round(percent, 0), "% Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"),
            shelter_burden == "Severely Burdened" ~ paste0(round(percent, 0), "% Severely Burdened\n(", prettyNum(count, big.mark=",", preserve.width="none"), " families)"))),
-                  size = 3, fontface = "bold", show.legend = FALSE,
+                  size = 4, fontface = "bold", show.legend = FALSE,
                   min.segment.length = Inf,
                   position = position_stack(vjust = 0.25),
            # vjust = 0.5,
@@ -263,25 +268,30 @@ fam_by_burden %>%
                      expand = expansion(mult = c(0, .35))) + 
   scale_y_discrete(name = "") +
   scale_fill_manual(values = c("#B4C8A8", "#DE8A5A", "#CA562C")) +
-  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Housing Burden",
+  labs(title = "Housing Burden for Families Earning Below and Above the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme_minimal() +
   theme(legend.title=element_blank(),
         legend.position = "top",
-        # legend.location = "plot",
+        legend.location = "plot",
         legend.justification="center",
+        legend.text = element_text(size = 13),
           panel.grid.major.y = element_blank(),
           axis.ticks = element_blank(),
           panel.grid.minor = element_blank(),
           plot.title.position= "plot",
           plot.caption.position = "plot",
-        axis.text.y = element_text(hjust = 0.5))
+        axis.text.y = element_text(hjust = 0.5, color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.title.x = element_text(size=12),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 
 ```
 
 
-```{r disability}
+```{r disability, fig.width=9.5, fig.height=5, fig.retina = 2, out.width = '100%'}
 people_by_disability <- read_csv("../microdata/data/people_by_disability.csv")
 
 people_by_disability %>% 
@@ -294,7 +304,7 @@ people_by_disability %>%
   ggplot(aes(x = percent, y = below_ess_finc, group = below_ess_finc, fill = disability_status, label = label)) +
   geom_bar(stat = "identity", color = "white") +
   geom_label_repel(aes(label = label),
-                   size = 3, fontface = "bold", show.legend = FALSE,
+                   size = 4.5, fontface = "bold", show.legend = FALSE,
                    # min.segment.length = Inf,
                    position = position_stack(vjust = 0.5),
                    # box.padding = 0.1,
@@ -312,24 +322,28 @@ people_by_disability %>%
                      name = "") +
   scale_y_discrete(name = "") +
   scale_fill_manual(values = c("No disability"=grey_dot,"With a disability"=blue_dot)) +
-  labs(title = "Families Earning Below and Above the Self-Sufficiency Standard \nby Disability Status",
+  labs(title = "Disability Status for People Earning Below and Above the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme_minimal() +
   theme(legend.title=element_blank(),
         legend.position = "top",
-        panel.grid.minor.y = element_blank(),
+        legend.text = element_text(size = 13),
         panel.grid.major.y = element_blank(),
         plot.title.position= "plot",
           plot.caption.position = "plot",
-        axis.text.y = element_text(hjust = 0.5))
+        axis.text.y = element_text(hjust = 0.5, color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.title.x = element_text(size=12),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 
 ```
 
-```{r}
+```{r workers_by_hours, fig.width = 9.5, fig.height = 6, fig.retina = 2, out.width = '100%'}
 workers_by_hours <- read_csv("../microdata/data/workers_by_hours.csv") %>% 
   mutate(
-    hours_bin = factor(hours_bin, levels = c("Unemployed", "Less than 20", "20 to 29", "30 to 34", "35 to 39", "40 or more")),
+    hours_bin = factor(hours_bin, levels = c("Unemployed", "Less than 20", "20 to 29", "30 to 34", "35 to 39", "40 or more"), labels = c("Unemployed", "Less than 20 hours", "20 to 29 hours", "30 to 34 hours", "35 to 39 hours", "40 or more hours")),
          label_text = case_when(
            below_ess_finc == "Yes" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "%)"),
            below_ess_finc == "No" ~ paste0(prettyNum(count, big.mark=",", preserve.width="none"), " (", round(percent, 0), "%)")),
@@ -343,29 +357,35 @@ workers_by_hours %>%
   geom_text(aes(label = label_text),
             vjust = 0.5,
             hjust = -0.1,
-            size = 3) +
+            size = 5) +
   scale_y_discrete(name = "") +
   scale_x_continuous(name = "Number of Workers",
                      breaks = seq(0, 12000, by = 2500),
                      label=comma,
-                     expand = expansion(mult = c(0, .15))) +
-  labs(title = "Workers Earning Below the Self-Sufficiency Standard by Hours Worked",
+                     expand = expansion(mult = c(0, .2))) +
+  labs(title = "Weekly Hours Worked for Workers Earning Below the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme_minimal() +
   theme(legend.title=element_blank(),
         legend.position = "top",
+        legend.text = element_text(size = 12),
         # legend.location = "plot",
         legend.justification="center",
           # panel.grid.major.y = element_blank(),
           axis.ticks = element_blank(),
           panel.grid.minor = element_blank(),
           plot.title.position= "plot",
-          plot.caption.position = "plot")
+          plot.caption.position = "plot",
+        axis.text.y = element_text(color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.text.x = element_text(size=14),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 
 ```
 
-```{r}
+```{r workers_by_medianwages, fig.width = 10, fig.height = 6, fig.retina = 2, out.width = '100%'}
 workers_by_medianwages <- read_csv("../microdata/data/workers_by_medianwages.csv") %>% 
    mutate(
     median_wage_bin_label = factor(median_wage_bin_label, levels = c("25610-37760", "37860-48320", "48340-60600", "60640-86950", "88050-238990"), labels = c("$25,610 - $37,760", "$37,860 - $48,320", "$48,340 - $60,600", "$60,640 - $86,950", "$88,050 - $238,990")),
@@ -382,14 +402,14 @@ workers_by_medianwages %>%
   geom_text(aes(label = label_text),
             vjust = 0.5,
             hjust = -0.1,
-            size = 3) +
+            size = 5) +
   scale_y_discrete(name = "") +
   scale_x_continuous(name = "Number of Workers",
                      breaks = seq(0, 12000, by = 1500),
                      label=comma,
-                     expand = expansion(mult = c(0, .15))) +
+                     expand = expansion(mult = c(0, .19))) +
   scale_fill_manual(values = c("#DE8A5A", "#EDBB8A", "#F6EDBD","#B4C8A8", "#70A494"))+
-  labs(title = "Workers Earning Below the Self-Sufficiency Standard by Median Wage",
+  labs(title = "Annual Median Wage for Workers Earning Below the Self-Sufficiency Standard",
        subtitle = geography_label,
        caption = acs_pums) +
   theme_minimal() +
@@ -397,14 +417,20 @@ workers_by_medianwages %>%
         legend.position = "none",
         # legend.location = "plot",
         legend.justification="center",
+        legend.text = element_text(size = 12),
           # panel.grid.major.y = element_blank(),
           axis.ticks = element_blank(),
           panel.grid.minor = element_blank(),
           plot.title.position= "plot",
-          plot.caption.position = "plot")
+          plot.caption.position = "plot",
+        axis.text.y = element_text(color = "black", size = 14),
+        text = element_text(size = 14),
+        axis.text.x = element_text(size=14),
+        plot.title = element_text(size = 18),
+        plot.caption = element_text(size = 12))
 
 ```
-```{r}
+```{r occupations_by_wagebin, fig.width = 6, fig.height = 10,  fig.retina = 2, out.width = '100%'}
 occupations_by_wagebin <- read_csv("../microdata/data/occupations_by_wagebin.csv")
 
 occupations_filtered <- occupations_by_wagebin %>% 
@@ -461,6 +487,10 @@ occupations_filtered %>%
   tab_style(
     style = cell_text(align = "center", v_align = "middle"),
     locations = list(cells_column_labels(2:4), cells_body(2:4))
+  ) %>% 
+  tab_footnote(
+    footnote = "See Appendix for more occupations",
+    locations = cells_title(groups = "title")
   ) %>% 
   tab_footnote(
     footnote = "Employment rate per 1,000 jobs",
